# hf_ecom_analyst

./: .gitignore  README.md  docker-compose.yml
containers/postgresql/init/: 01-init.sh
database/sql/: get_database.sql
mcp-server/: app.py  bigquery_work.py  db_work.py  gradio_dashboard.py  gradio_mcp.py  list_columns_in_table_bq.sql  list_database_infos_bq.sql  list_schema.sql  list_schema_bq.sql  list_tables_in_schema_bq.sql  mcp_server.py  mcp_server_only.py  requirements.txt  var_stats.py  views_sql.sql  views_sql_bq.sql
modal-inference/: README.md  deepseek_deploy.py  dependencies.py  embeddings_deploy.py  fastapi-mcp.py  fastapi_app.py  pyproject.toml
